--- a/6.css
+++ b/6.css
@@ -1,9 +1,54 @@
-@charset "UTF-8";
+@charset "utf-8";
 
+/* div 가운데 정렬 */
 
-a{
-    display: block;
-    width: 100px;
+#wrap{
+    width: 800px;
+    height: 400px;
+    background-color: aqua;
+    margin: auto;
+
+}
+
+/* header */
+
+header{
+    width: 800px;
     height: 100px;
-    background-color: darkorange;
+    background-color: palegoldenrod;
+}
+
+#logo{color: brown;}
+
+
+/* nav */
+#nav{
+    width: 150px;
+    height: 200px;
+    background-color: palegreen;
+    float: left;
+}
+
+#gnb{color: red;}
+
+
+/* section */
+#section{
+    width: 400px;
+    height: 200px;
+    background-color: paleturquoise;
+    float: right;
+}
+
+#title{text-align: center;color: red;}
+#text1{background-color: blueviolet;}
+#text2{background-color: cornflowerblue;}
+
+/* footer */
+
+#footer{
+    clear: both;
+    width: 800px;
+    height: 100px;
+    background-color: darkcyan;
 }
