--- a/flexbox.html/css/gallery.css
+++ b/flexbox.html/css/gallery.css
@@ -2,15 +2,145 @@
 
 /* mobile */
 body{background: pink;}
+.hidden{display: none;}
+*{box-sizing: border-box;}
+#warp{display: flex; flex-flow: column nowrap;
+width: 80%; margin: auto; max-width: 960px;
+}
+
+
+/* mo - info section */
+.info-section{order: 1; background: #2ecc71;border-bottom: 1px solid #39d67c;}
+.info-section ul.info-list{display: flex;}
+.info-section ul.info-list li{width: 25%; text-align: center;}
+.info-section ul.info-list li a{display: block; padding: 15px 0;}
+
+
+/* mo - header area */
+header{order: 2; display: flex; flex-direction: column; position: relative;}
+header h1{order: 1; width: 100%; padding: 30px 0; background: #2ecc71; text-align: center; text-transform: uppercase; ;line-height: 1.5; text-shadow: 0 1px 1px #25ab5e;}
+
+
+
+header nav{ order: 2; width: 100%;}
+header nav ul.gnb{}
+header nav ul.gnb li{display: flex; background: #2c3e50;}
+header nav ul.gnb li a{width: 80%; padding: 20px 0 ; font-size: 0.938em; font-weight: bold; text-indent: 20px;}
+header nav ul.gnb li span{width: 20%; text-indent: -99999px; background: url(../image/s_images/sub_menu_toggle_btn.png) no-repeat center; cursor: pointer;}
+
+
+/* 전체메뉴토글버튼 */
+header .menu-toggle-btn{display: block; width: 30px; height: 30px; background: url(../image/s_images/menu_toggle_btn.png); text-indent: -99999px; position: absolute; top: 10px; right: 10px; cursor: pointer;}
+
+
+/* mo - sub-header-section */
+.sub-header-section{order: 3; background: #219af7; padding: 50px 0; text-align: center;}
+.sub-header-section h2{color: #fff; font-size: 1.313em;margin-bottom: 12px;}
+.sub-header-section ul.sub-list{}
+.sub-header-section ul.sub-list li{display: inline; font-size: 0.813em; font-weight: bold;}
+
+
+/* mo - content-section */
+.content-section{order: 4; padding: 20px; background: #fff;}
+
+/* 1행 */
+.content-section .content-row1{}
+.content-section .content-row1 ul{}
+.content-section .content-row1 ul li{margin-top: 20px;}
+.content-section .content-row1 ul li:first-child{margin-top: 0;}
+.content-section .content-row1 ul li a{}
+.content-section .content-row1 ul li a img{width: 100%; max-width: 100%; border-radius: 10px; filter: grayscale(100%); transition: all 0.3s;}
+.content-section .content-row1 ul li a img:hover{filter: grayscale(0);}
+
+
+/* 2행 */
+.content-section .content-row2{display: flex; 
+    justify-content: space-between; margin: 30px 0 40px;}
+
+
+.content-section .content-row2 .search-box form input{width: 120px; height: 28px; text-indent: 10px;}
+.content-section .content-row2 .search-box form .search-select-box{display: none;}
+
+
+
+.content-section .content-row2 .write-box a{ display: block; width: 70px;height: 28px; font-size: 0.813em; text-align: center; line-height: 28px; background-color: #e65d5d;}
+
+
+/* 3행 */
+.content-section .content-row3{display: flex; justify-content: center;}
+.content-section .content-row3 span{text-indent: -9999px; width: 28px; height: 28px; }
+.content-section .content-row3 span.prev-btn{background: #2ecc71 url(../image/s_images/list_prev_btn.png) no-repeat center; margin-right: 10px;}
+.content-section .content-row3 span.next-btn{background: #2ecc71 url(../image/s_images/list_next_btn.png) no-repeat center;margin-left: 10px;}
+.content-section .content-row3 a{border: 1px solid #219af7;color: #219af7; width: 26px;
+height: 26px;}
+.content-section .content-row3 a:nth-child(3){margin: 0 6px;}
+
+/* mo - footer */
+footer{order: 5; width: 100%; background: #474747;}
+footer p{padding: 20px; text-align: center; font-size: 2vw; text-transform: uppercase;color: #fff;}
 
 /* tab */
+/* tab */
 @media all and (min-width:768px){
-    body{background: palegoldenrod;}
+  body{background: palegoldenrod;}
+  /* tab - header area */
+  header{flex-direction: row;}
+  header h1{position: absolute;top: 0;left: 0;width: 15.625%;padding: 0;z-index: 11;}
+  header h1 a{padding: 50px 0;display: block;}
+
+  header nav{min-height: 80px;background: #2ecc71;position: relative;}
+  header nav ul{position: absolute;right: 0;top: 100%;z-index: 10;width: 40.36458333333333%;}
+
+  header .menu-toggle-btn{top: 30%;}
+
+  /* tab - cotent-section */
+  .content-section{padding: 40px;}
+
+  /* 1행 */
+  .content-section .content-row1 ul{display: flex;flex-wrap: wrap;justify-content: space-between;}
+  .content-section .content-row1 ul li{margin-top: 0;width: 49%;margin-bottom: 15px;}
+
+  /* 2행 */
+  .content-section .content-row2 .search-box form .search-selcet-box{display: block;} 
+  .search-box form {display: flex;}
+  .search-selcet-box{margin-left: 10px;position: relative;}
+  .search-selcet-box span{background: #e65d5d;color: #fff;display: block;width: 80px;height: 28px;text-align: center;line-height: 28px;font-size: 0.813em;cursor: pointer;}
+  .search-selcet-box ul{position: absolute;top: 105%;width: 100%;left: 0;display: none;}
+  .search-selcet-box:hover ul{display: block;}
+  .search-selcet-box ul li{background: #e65d5d;font-size: 0.813em;}
+  .search-selcet-box ul li a{padding: 6px 0;display: block;}
+
+  footer{padding: 40px;font-size: 2vw;}
 }
+
 
 
 /* pc */
 
 @media all and (min-width:960px){
     body{background: palegreen;}
+
+    #wrap{width: 90%;position: relative;}
+
+  /* pc - info section */
+  .info-section{position: absolute;top: 30px;right: 30px;z-index: 10;border-bottom:0;}
+  .info-section ul.info-list li{width: auto;margin-left: 15px;}
+  .info-section ul.info-list li a{padding: 0;}
+
+  /* pc - header area */
+  header{justify-content: flex-end;position: relative;}
+  header h1{width:12.5%;}
+  header nav{min-height: 80px;width: 87.5%;}
+  header nav ul{position: static;width: 100%;display: flex !important;margin-top: 15px;}
+  header nav ul.gnb li{background: none;}
+  header nav ul.gnb li a{width: auto;margin-left: 20px;}
+  header nav ul.gnb li span{display: none;}
+  header .menu-toggle-btn{display: none;}
+
+  /* pc - cotent-section */
+  /* 1행 */
+  .content-section{padding: 60px;}
+  .content-section .content-row1 ul li{width: 24%;}
+
+  footer p{text-align: left;font-size: 0.8vw;}
 }
